application-1/analytics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: analytics-deployment
  labels: 
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: python
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: user-analytics
    app.kubernetes.io/version: "1.0"
  annotations:
    app.openshift.io/vcs-uri: "git@github.com:redhat-developer/topology-example.git"
    app.openshift.io/vcs-ref: "9972451789e4a5724ff3b0be09fba5ebdd43b4d2"
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/part-of: application-1
      app.kubernetes.io/name: python
      app.kubernetes.io/component: backend
      app.kubernetes.io/instance: user-analytics
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: application-1
        app.kubernetes.io/name: python
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: user-analytics
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - name: analytics
          image: nginx:1.7.9
          ports:
            - containerPort: 80
