application-1/analytics/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: analytics-route
  labels: 
    app.kubernetes.io/part-of: application-1
    app.kubernetes.io/name: analytics
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: user-analytics
    app.kubernetes.io/version: "1.0"
spec:
  host: analytics.io
  path: /
  to:
    kind: Service
    name: analytics-service
